fix: navbar unwanted spacing from the top
Updated navbar.scss file

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -236,5 +236,5 @@
 }
 
 .navbar-announcement {
-  top: 35px;
+  top: 0px;
 }
